--- a/templates/consul-template.service.j2
+++ b/templates/consul-template.service.j2
@@ -5,7 +5,7 @@ After=network-online.target consul.service vault.service
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/consul-template -log-level debug -config=/etc/consul-template.d/config.json
+ExecStart=/usr/local/bin/consul-template -log-level debug -config=/etc/consul-template.d/template.json
 ExecReload=/bin/kill -SIGHUP $MAINPID
 ExecStop=/bin/kill -SIGINT $MAINPID
 Restart=on-failure
